1998-12-08  Michael Meissner  <meissner@cygnus.com>

	* monitor.c (monitor_printable_string): New function to convert a
	string into a printable representation.
	(monitor_error): Call error after converting string into printable
	format.
	(monitor_printf{,_noecho}): If EXTRA_RDEBUG is defined, convert
	string into printable form before printing.
	(monitor_expect): Ditto.
	(monitor_read_memory{,_single}): Call monitor_error, not error.
	(monitor_read_memory): Return immediately if length is 0.

	* ppcbug-rom.c (init_ppc_cmds): Fill in dump_registers field,
 	which is now required.

Mon Dec 14 11:01:39 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.h, gdbarch.c: Consolidate the semi-dynamic target system
 	dependant GDB parameters.
	(set_gdbarch_from_file): Combine set_architecture_from_file and
 	set_byte_order_from_file.
	* top.c, defs.h, printcmd.c: Delete them from here.
	* Makefile.in: Add gdbarch.[ch].
	* exec.c (exec_file_command): Call set_gdbarch_from_file.

Sun Dec 13 09:52:51 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* defs.h (TARGET_PRINT_INSN_INFO, TARGET_PRINT_INSN): Define.
	(TARGET_ARCHITECTURE, TARGET_ARCHITECTURE_AUTO): Define.
	(TARGET_BYTE_ORDER_AUTO): Define.
	(TARGET_BYTE_ORDER_SELECTABLE_P): Provide default. Replaces
 	TARGET_BYTE_ORDER_SELECTABLE. Handle compat issues.
	(BITS_BIG_ENDIAN): Simplify.
	(TARGET_FLOAT_FORMAT): Ditto.
	(TARGET_DOUBLE_FORMAT): 

	* remote-e7000.c, sh-tdep.c, printcmd.c, gdbtk-cmds.c,
 	remote-sim.c, remote-rdi.c, sparc-tdep.c: Update.
	
	* config/powerpc/tm-ppcle-eabi.h, config/rs6000/tm-rs6000.h,
 	config/powerpc/tm-ppc-eabi.h, config/mn10300/tm-mn10300.h:
 	Convert.

Sat Dec 12 09:28:13 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* frame.h (struct frame_info): Add CORE_ADDR *saved_regs and
 	struct frame_extra_info *extra_info.
	(frame_obstack_alloc, frame_saved_regs_zalloc): Prototype.
	(SIZEOF_FRAME_SAVED_REGS): Provide default.
	(FRAME_INIT_SAVED_REGS): Provide default.